# tmctol

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md
.github/actions/macos-dependencies/: action.yml
.github/actions/ubuntu-dependencies/: action.yml
.github/tests/: zombienet-smoke-test.zndsl
.github/workflows/: ci.yml  release.yml  test-zombienet.yml
client/: README.md  package-lock.json  package.json  svelte.config.js
client/src/: app.css  app.html
client/src/lib/: index.ts
client/src/lib/adapters/: types.ts
client/src/lib/adapters/blockchain/: index.ts
client/src/lib/adapters/simulator/: index.ts  types.d.ts
client/src/lib/entities/layout/: index.svelte.ts  types.ts
client/src/lib/entities/system/: index.svelte.ts  types.ts
client/src/lib/shared/: format.ts  types.ts
client/src/lib/shared/ui/: Badge.svelte  Button.svelte  Card.svelte  NumberInput.svelte  index.ts
client/src/lib/widgets/: BucketsWidget.svelte  ChartWidget.svelte  ConfigPanel.svelte  InfoPanel.svelte  LeafPane.svelte  LogWidget.svelte  ResizeHandle.svelte  SwapWidget.svelte  TileContainer.svelte  WalletWidget.svelte  index.ts
client/src/routes/: +layout.svelte  +page.svelte
docs/: 1.en.md  README.md  aaa-plan.md  aaa-scenarios.ru.md  aaa-specification.md  aaa-upgrade-playbook.ru.md  asset-registry-architecture.md  axial-router-architecture.md  burning-manager-architecture.md  core-architecture.md  foreign-asset-migration.md  global-benchmarking.md  governance-operations.md  l2-tol.en.md  l2-tol.ru.md  manifesto.en.md  manifesto.ru.md  paseo-testnet-guide.ru.md  polkadot-sdk-2512-insights.md  production-deployment-guide.md  real-dao-manifesto.en.md  real-dao-manifesto.md  real-dao-manifesto.ru.md  roadmap.md  tmctol.en.md  tmctol.ru.md  token-minting-curve-architecture.md  tol-implementation-guide.md  treasury-owned-liquidity-architecture.md  zap-manager-architecture.md  zombienet-manual-testing.ru.md
scripts/: 01-download-binaries.sh  02-install-tools.sh  03-build-runtime.sh  04-generate-chain-spec.sh  05-spawn-zombienet.sh  06-run-benchmarks.sh  _common.sh  cleanup.sh  deploy-production.sh  download-omni-node.sh  generate-paseo-local-raw.sh  setup-and-run.sh  test-ci-local.sh  test-release-local.sh  test-zombienet-local.sh  validate-context.sh  xcm-e2e-harness.sh  xcm-migration-harness.sh
simulator/: index.html  model.js  tests.js  tests.md  types.d.ts
template/: Cargo.toml  network.toml  rust-toolchain.toml  zombienet.toml
template/pallets/: README.md
template/pallets/aaa/: Cargo.toml
template/pallets/aaa/src/: adapters.rs  benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
template/pallets/asset-registry/: Cargo.toml
template/pallets/asset-registry/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
template/pallets/axial-router/: Cargo.toml
template/pallets/axial-router/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
template/pallets/burning-manager/: Cargo.toml
template/pallets/burning-manager/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
template/pallets/token-minting-curve/: Cargo.toml
template/pallets/token-minting-curve/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
template/pallets/treasury-owned-liquidity/: Cargo.toml
template/pallets/treasury-owned-liquidity/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
template/pallets/zap-manager/: Cargo.toml
template/pallets/zap-manager/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
template/primitives/: Cargo.toml
template/primitives/src/: assets.rs  ecosystem.rs  lib.rs
template/runtime/: Cargo.toml  build.rs
template/runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  lib.rs
template/runtime/src/chain_specs/: mod.rs
template/runtime/src/configs/: aaa_config.rs  assets_config.rs  axial_router_config.rs  burning_manager_config.rs  mod.rs  token_minting_curve_config.rs  treasury_owned_liquidity_config.rs  xcm_config.rs  zap_manager_config.rs
template/runtime/src/governance/: mod.rs
template/runtime/src/monitoring/: mod.rs
template/runtime/src/tests/: aaa_integration_tests.rs  asset_convertion_integration_tests.rs  asset_registry_integration_tests.rs  axial_router_integration_tests.rs  burning_manager_integration_tests.rs  common.rs  economic_metrics.rs  load_testing.rs  mod.rs  tmctol_integration_tests.rs  treasury_owned_liquidity_integration_tests.rs  xcm_e2e_tests.rs  zap_manager_integration_tests.rs  zap_manager_load_tests.rs
template/runtime/src/weights/: block_weights.rs  extrinsic_weights.rs  mod.rs  pallet_aaa.rs  pallet_asset_registry.rs  pallet_axial_router.rs  pallet_burning_manager.rs  pallet_token_minting_curve.rs  pallet_treasury_owned_liquidity.rs  pallet_zap_manager.rs  paritydb_weights.rs  rocksdb_weights.rs
