[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-parachain-template.git"
edition = "2024"

[workspace]
default-members = ["pallets/axial-router", "runtime"]
members = ["pallets/aaa", "pallets/asset-registry", "pallets/axial-router", "pallets/burning-manager", "pallets/token-minting-curve", "pallets/treasury-owned-liquidity", "pallets/zap-manager", "primitives", "runtime"]
resolver = "2"

[workspace.lints.rust]
suspicious_double_ref_op = { level = "allow", priority = 2 }
# `substrate_runtime` is a common `cfg` condition name used in the repo.
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(build_opt_level, values("3"))',
	'cfg(build_profile, values("debug", "release"))',
	'cfg(enable_alloc_error_handler)',
	'cfg(fuzzing)',
	'cfg(ignore_flaky_test)',
	'cfg(substrate_runtime)',
] }

[workspace.lints.clippy]
all = { level = "allow", priority = 0 }
bind_instead_of_map = { level = "allow", priority = 2 }
borrowed-box = { level = "allow", priority = 2 }
complexity = { level = "warn", priority = 1 }
correctness = { level = "warn", priority = 1 }
default_constructed_unit_structs = { level = "allow", priority = 2 }
derivable_impls = { level = "allow", priority = 2 }
eq_op = { level = "allow", priority = 2 }
erasing_op = { level = "allow", priority = 2 }
extra-unused-type-parameters = { level = "allow", priority = 2 }
identity-op = { level = "allow", priority = 2 }
if-same-then-else = { level = "allow", priority = 2 }
large_enum_variant = { level = "allow", priority = 2 }
needless-lifetimes = { level = "allow", priority = 2 }
needless_option_as_deref = { level = "allow", priority = 2 }
nonminimal-bool = { level = "allow", priority = 2 }
option-map-unit-fn = { level = "allow", priority = 2 }
result_unit_err = { level = "allow", priority = 2 }
stable_sort_primitive = { level = "allow", priority = 2 }
too-many-arguments = { level = "allow", priority = 2 }
type_complexity = { level = "allow", priority = 2 }
unit_arg = { level = "allow", priority = 2 }
unnecessary_cast = { level = "allow", priority = 2 }
useless_conversion = { level = "allow", priority = 2 }
while_immutable_condition = { level = "allow", priority = 2 }
zero-prefixed-literal = { level = "allow", priority = 2 }

[workspace.dependencies]
tmctol-runtime = { path = "./runtime", default-features = false }
primitives = { path = "./primitives", default-features = false }
pallet-aaa = { path = "./pallets/aaa", default-features = false }
pallet-asset-registry = { path = "./pallets/asset-registry", default-features = false }
pallet-axial-router = { path = "./pallets/axial-router", default-features = false }
pallet-burning-manager = { path = "./pallets/burning-manager", default-features = false }
pallet-token-minting-curve = { path = "./pallets/token-minting-curve", default-features = false }
pallet-treasury-owned-liquidity = { path = "./pallets/treasury-owned-liquidity", default-features = false }
pallet-zap-manager = { path = "./pallets/zap-manager", default-features = false }

# Polkadot SDK umbrella crate
polkadot-sdk = { version = "2512.1.0", default-features = false }

# Polkadot SDK individual crates
frame = { package = "polkadot-sdk-frame", version = "0.14.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.25.0", default-features = false }
substrate-wasm-builder = "31.1.0"

# External crates
codec = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
docify = "0.2"
hex-literal = "0.4"
log = { version = "0.4", default-features = false }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
smallvec = "1.11"
sp-arithmetic = { version = "28.0.0", default-features = false }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
