[package]
name = "primitives"
version = "0.1.0"
description = "Shared primitive types for the TMCTOL parachain"
authors = ["Parachain Team"]
edition = "2021"
license = "MIT-0"
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
serde = { version = "1.0.214", default-features = false, features = ["derive", "alloc"] }
sp-arithmetic = { version = "28.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde/std",
	"sp-arithmetic/std",
]
