[package]
name = "tmctol-runtime"
description = "A parachain runtime template built with Substrate and Cumulus, part of Polkadot Sdk."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
docify = { workspace = true }
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }

[dependencies]
codec = { workspace = true }
cumulus-pallet-parachain-system.workspace = true
docify = { workspace = true }
hex-literal = { optional = true, workspace = true, default-features = true }
log = { workspace = true }
pallet-aaa.workspace = true
pallet-asset-registry.workspace = true
pallet-axial-router.workspace = true
pallet-burning-manager.workspace = true
pallet-token-minting-curve.workspace = true
pallet-treasury-owned-liquidity.workspace = true
pallet-zap-manager.workspace = true
primitives.workspace = true

polkadot-sdk = { workspace = true, features = [
  "cumulus-pallet-aura-ext",
  "cumulus-pallet-parachain-system",
  "cumulus-pallet-session-benchmarking",
  "cumulus-pallet-weight-reclaim",
  "cumulus-pallet-xcm",
  "cumulus-pallet-xcmp-queue",
  "cumulus-primitives-aura",
  "cumulus-primitives-core",
  "cumulus-primitives-utility",
  "pallet-asset-conversion",
  "pallet-assets",
  "pallet-aura",
  "pallet-authorship",
  "pallet-balances",
  "pallet-collator-selection",
  "pallet-message-queue",
  "pallet-session",
  "pallet-sudo",
  "pallet-timestamp",
  "pallet-transaction-payment",
  "pallet-transaction-payment-rpc-runtime-api",
  "pallet-xcm",
  "parachains-common",
  "polkadot-parachain-primitives",
  "polkadot-runtime-common",
  "runtime",
  "staging-parachain-info",
  "staging-xcm",
  "staging-xcm-builder",
  "staging-xcm-executor",
] }
scale-info.workspace = true
serde_json = { workspace = true, default-features = false, features = [
  "alloc",
] }
smallvec = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
  "codec/std",
  "cumulus-pallet-parachain-system/std",
  "log/std",
  "pallet-aaa/std",
  "pallet-asset-registry/std",
  "pallet-axial-router/std",
  "pallet-burning-manager/std",
  "pallet-token-minting-curve/std",
  "pallet-treasury-owned-liquidity/std",
  "pallet-zap-manager/std",
  "primitives/std",

  "polkadot-sdk/std",
  "scale-info/std",
  "serde_json/std",
  "substrate-wasm-builder",
]

runtime-benchmarks = [
  "cumulus-pallet-parachain-system/runtime-benchmarks",
  "hex-literal",
  "pallet-aaa/runtime-benchmarks",
  "pallet-asset-registry/runtime-benchmarks",
  "pallet-axial-router/runtime-benchmarks",
  "pallet-burning-manager/runtime-benchmarks",
  "pallet-token-minting-curve/runtime-benchmarks",
  "pallet-treasury-owned-liquidity/runtime-benchmarks",
  "pallet-zap-manager/runtime-benchmarks",

  "polkadot-sdk/runtime-benchmarks",
]

try-runtime = [
  "cumulus-pallet-parachain-system/try-runtime",
  "pallet-asset-registry/try-runtime",
  "pallet-burning-manager/try-runtime",
  "pallet-token-minting-curve/try-runtime",
  "pallet-treasury-owned-liquidity/try-runtime",
  "pallet-zap-manager/try-runtime",

  "polkadot-sdk/try-runtime",
]

# Enable the metadata hash generation.
#
# This is hidden behind a feature because it increases the compile time.
# The wasm binary needs to be compiled twice, once to fetch the metadata,
# generate the metadata hash and then a second time with the
# `RUNTIME_METADATA_HASH` environment variable set for the `CheckMetadataHash`
# extension.
metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# A convenience feature for enabling things when doing a build
# for an on-chain release.
on-chain-release-build = ["metadata-hash"]
