[package]
name = "pallet-aaa"
version = "0.1.0"
description = "Deterministic account abstraction actor pallet"
authors.workspace = true
license = "MIT-0"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame = { workspace = true }
polkadot-sdk = { workspace = true, features = [
  "frame-support",
  "frame-system",
  "sp-runtime",
  "sp-weights",
] }

[dev-dependencies]
serde = { workspace = true }
polkadot-sdk = { workspace = true, features = [
  "frame-support",
  "frame-system",
  "pallet-balances",
  "sp-core",
  "sp-io",
  "sp-runtime",
] }

[features]
default = ["std"]
std = [
  "codec/std",
  "polkadot-sdk/std",
  "scale-info/std",
]
runtime-benchmarks = [
  "polkadot-sdk/runtime-benchmarks",
  "frame/runtime-benchmarks",
]
try-runtime = ["polkadot-sdk/try-runtime"]
