[package]
name = "pallet-asset-registry"
version = "0.1.0"
description = "Governance-controlled registry for foreign asset metadata"
authors = ["Parachain Template Team"]
license = "MIT-0"
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-parachain-template.git"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
polkadot-sdk = { workspace = true, features = [
  "frame-support",
  "frame-system",
  "pallet-assets",
  "sp-runtime",
  "staging-xcm",
] }
# Local dependencies
primitives = { path = "../../primitives", default-features = false }

[dev-dependencies]
polkadot-sdk = { workspace = true, features = [
  "pallet-balances",
  "sp-core",
  "sp-io",
] }

[features]
default = ["std"]
std = [
    "codec/std",
    "polkadot-sdk/std",
    "scale-info/std",
    "primitives/std",
]
runtime-benchmarks = [
  "polkadot-sdk/runtime-benchmarks",
]
try-runtime = ["polkadot-sdk/try-runtime"]
