[package]
name = "pallet-asset-registry"
version = "0.1.0"
description = "Governance-controlled registry for foreign asset metadata"
authors.workspace = true
license = "MIT-0"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame = { workspace = true }
polkadot-sdk = { workspace = true, features = [
  "pallet-assets",
  "sp-runtime",
  "staging-xcm",
] }
# Local dependencies
primitives = { workspace = true, default-features = false }

[dev-dependencies]
polkadot-sdk = { workspace = true, features = [
  "frame-support",
  "frame-system",
  "pallet-balances",
  "sp-core",
  "sp-io",
] }

[features]
default = ["std"]
std = [
  "codec/std",
  "polkadot-sdk/std",
  "scale-info/std",
  "primitives/std",
]
runtime-benchmarks = [
  "polkadot-sdk/runtime-benchmarks",
  "frame/runtime-benchmarks",
]
try-runtime = ["polkadot-sdk/try-runtime"]
