[package]
name = "pallet-burning-manager"
version = "0.1.0"
description = "Token-driven fee processing pallet for TMCTOL framework"
authors = ["Parachain Template Team"]
license = "MIT-0"
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-parachain-template.git"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
polkadot-sdk = { workspace = true, features = [
  "frame-support",
  "frame-system",
  "pallet-asset-conversion",
  "pallet-balances",
  "pallet-assets",
  "sp-runtime",
  "sp-io",
] }
# Local dependencies
pallet-axial-router = { path = "../axial-router", default-features = false }
primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "polkadot-sdk/std",
    "scale-info/std",
    "pallet-axial-router/std",
    "primitives/std",
]
runtime-benchmarks = [
  "polkadot-sdk/runtime-benchmarks",
]
try-runtime = ["polkadot-sdk/try-runtime"]
