[package]
name = "pallet-token-minting-curve"
version = "0.1.0"
description = "Token Minting Curve pallet implementing linear price ceiling with unidirectional minting for TMCTOL framework"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame = { workspace = true }
polkadot-sdk = { workspace = true, features = [
  "frame-support",
  "frame-system",
  "pallet-assets",
  "pallet-balances",
  "sp-runtime",
  "sp-io",
  "sp-core",
] }
primitives = { workspace = true, default-features = false }

# Optional dependency for TOL Zap integration
pallet-treasury-owned-liquidity = { path = "../treasury-owned-liquidity", default-features = false, optional = true }

# Zap manager dependency for token-driven liquidity provisioning
pallet-zap-manager = { path = "../zap-manager", default-features = false, optional = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "primitives/std",
    "polkadot-sdk/std",
    "scale-info/std",
    "pallet-treasury-owned-liquidity/std",
    "pallet-zap-manager/std",
]
runtime-benchmarks = [
    "polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
    "polkadot-sdk/try-runtime",
]
