[package]
name = "pallet-treasury-owned-liquidity"
version = "1.0.0"
description = "Treasury-Owned Liquidity pallet implementing multi-bucket XYK pool management for TMCTOL framework"
authors = ["LLB Lab"]
edition = "2021"
license = "MIT"
repository = "https://github.com/llb-lab/parachain"
homepage = "https://github.com/llb-lab/parachain"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false, features = ["derive", "full"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
polkadot-sdk = { workspace = true, features = [
  "frame-support",
  "frame-system",
  "pallet-assets",
  "pallet-balances",
  "pallet-asset-conversion",
  "sp-runtime",
  "sp-std",
  "sp-io",
] }
primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "polkadot-sdk/std",
    "scale-info/std",
]
runtime-benchmarks = [
    "polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
    "polkadot-sdk/try-runtime",
]
